--- a/Shittest.html
+++ b/Shittest.html
@@ -10,19 +10,12 @@
 	<a href="https://www.pornhub.com/">Click on this nigga</a>
 	<hr>
 	<marquee behavior=scroll direction="left" scrollamount="20"><h4> Welcome to my website!, Hope you like it fucktard</h4>
-	<img src ="C:\Users\Cheol\Desktop\ab.jpg" width = "300px" height= "200px" align="center">
+	<img src ="https://imgur.com/kPxdjRS.jpg" width = "300px" height= "200px" align="center">
 	</marquee> 
 	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>
-	&nbsp; <br>	
-	&nbsp; <br>
+	<marquee behavior=scroll direction="left" scrollamount="20"><h4> Welcome to my website!, Hope you like it fucktard</h4>
+	<img src ="https://imgur.com/kPxdjRS.jpg" width = "300px" height= "200px" align="center">
+	</marquee>
 	&nbsp; <br>
 	&nbsp; <br>
 	&nbsp; <br>
